--- a/Notebook/Notebook.Api/Notebook.Api.csproj
+++ b/Notebook/Notebook.Api/Notebook.Api.csproj
@@ -8,4 +8,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Notebook.Infrastructure\Notebook.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
